--- a/report/markdown/manuscript_figures_tables.Rmd
+++ b/report/markdown/manuscript_figures_tables.Rmd
@@ -90,7 +90,7 @@ The collagen-related genes were retrieved from the published Collagen Signature 
 Expression of the collagen-related genes of interest between patient-matched benign and malignant specimens was compared by the false discovery rate method (FDR) corrected paired two-tailed T test with Cohen's d effect size statistic. 
 Differentially expressed genes were defined by pFDR < 0.05 and d $\geq$ 0.2 criteria indicative of significant, at least weak expression regulation (__Supplementary Table S3__). 
 
-Differential gene expression in cancer samples stratified by Gleason scoring (5 - 6, 7 and $\geq$ 8) was assessed by FDR-corrected one-way ANOVA with $\eta^2$ effect size statistic. 
+Differential gene expression in cancer samples stratified by the ISUP risk strata (ISUP1: Gleason score 5 - 6, ISUP2: Gleason score 7 and ISUP3: Gleason score $\geq$ 8) was assessed by FDR-corrected one-way ANOVA with $\eta^2$ effect size statistic. 
 Genes with pFDR < 0.05 and $\eta^2 \geq$ 0.02 were deemed differentially regulated (__Supplementary Table S4__). 
 
 ## Prediction of biochemical relapse-free survival by gradient boosted machine modeling
@@ -129,7 +129,7 @@ _(A) Representative MRI axial sequences of the prostate of an 83-year-old patien
 
 _(B) Differences in $log_2$-transformed expression of `r nrow(globals$genes_interest)` collagen-related genes between donor-matched tumor and benign prostate tissue samples were investigated by paired T test with Cohen's d effect size statistic in the GSE70768 (n = `r norm_tumor$n_numbers$gse70768`) and TCGA (n = `r norm_tumor$n_numbers$tcga` tissue pairs) cohorts. P values were corrected for multiple testing with the false discovery rate method. Mean normalized $log_2$-transformed expression levels in benign and cancer tissue for `r length(unique(unlist(norm_tumor$common)))` genes significantly regulated in both cohorts with at least weak effect size (pFDR < 0.05, d $\geq$ 0.2) are presented in a heat map._
 
-_(C) Differences in $log_2$-transformed expression levels of `r nrow(globals$genes_interest)` collagen-related genes between cancer samples stratified by Gleason scores were assessed by one-way ANOVA with $\eta^2$ effect size statistic in the GSE54460 (`r format_strata_n(gs_uni$n_numbers$gse54460)`), GSE70768 (`r format_strata_n(gs_uni$n_numbers$gse70768)`), GSE70769 (`r format_strata_n(gs_uni$n_numbers$gse70769)`), GSE220095 (`r format_strata_n(gs_uni$n_numbers$gse220095)`), DKFZ (`r format_strata_n(gs_uni$n_numbers$dkfz)`), and TCGA cohort (`r format_strata_n(gs_uni$n_numbers$tcga)`). Mean normalized $log_2$-transformed expression levels of genes significantly regulated between the Gleason score strata with at least weak effect size (pFDR < 0.05, $\eta^2 \geq$ 0.02) are presented in a heat map._
+_(C) Differences in $log_2$-transformed expression levels of `r nrow(globals$genes_interest)` collagen-related genes between cancer samples stratified according to the ISUP risk system were assessed by one-way ANOVA with $\eta^2$ effect size statistic in the GSE54460 (`r format_strata_n(gs_uni$n_numbers$gse54460)`), GSE70768 (`r format_strata_n(gs_uni$n_numbers$gse70768)`), GSE70769 (`r format_strata_n(gs_uni$n_numbers$gse70769)`), GSE220095 (`r format_strata_n(gs_uni$n_numbers$gse220095)`), DKFZ (`r format_strata_n(gs_uni$n_numbers$dkfz)`), and TCGA cohort (`r format_strata_n(gs_uni$n_numbers$tcga)`). Mean normalized $log_2$-transformed expression levels of genes significantly regulated between the Gleason score strata with at least weak effect size (pFDR < 0.05, $\eta^2 \geq$ 0.02) are presented in a heat map._
 
 \newpage
 
